--- a/src/main/resources/dart2-v3template/_array_copy.mustache
+++ b/src/main/resources/dart2-v3template/_array_copy.mustache
@@ -1,18 +1,19 @@
+/* nullable: {{isNullable}}, vend: {{vendorExtentions}} */
+data{{#isNullable}}?{{/isNullable}}.
 {{#items}}
-  data{{#vendorExtensions.x-list-null}}?{{/vendorExtensions.x-list-null}}.
   {{#isArray}}
     map((data) { return (({{{dataType}}} data) {
-    return {{>_copy}};})(data); }){{^nullSafe}}{{#vendorExtensions.x-list-null}}?{{/vendorExtensions.x-list-null}}{{/nullSafe}}.toList()
+    return {{>_copy}};})(data); }){{#isNullable}}?{{/isNullable}}.toList()
   {{/isArray}}
   {{#isMap}}
-    map((data) { ((data) { return {{>_copy}};})(data); }).toList()
+    map((data) { ((data) { return {{>_copy}};})(data); }){{#isNullable}}?{{/isNullable}}.toList()
   {{/isMap}}
   {{^items}}
     {{^isModel}}
       toList()
     {{/isModel}}
     {{#isModel}}
-      map((data) => {{>_copy}}).toList()
+      map((data) => {{>_copy}}){{#isNullable}}?{{/isNullable}}.toList()
     {{/isModel}}
   {{/items}}
 {{/items}}
